# splinter_engine_assets

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  ctx.cpp  ctx.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/engine/core/: abstract_entity.cpp  abstract_entity.h  abstract_gizmo.cpp  abstract_gizmo.h  abstract_light.cpp  abstract_light.h  ambient_light.cpp  ambient_light.h  camera.cpp  camera.h  common.h  directional_light.cpp  directional_light.h  extmath.cpp  extmath.h  gridline.cpp  gridline.h  just_a_quad.h  material.cpp  material.h  mesh.cpp  mesh.h  point_light.cpp  point_light.h  scene.cpp  scene.h  spot_light.cpp  spot_light.h  texture.cpp  texture.h  vertex.cpp  vertex.h
client/engine/gl/: fpscounter.cpp  fpscounter.h  gl_material.cpp  gl_material.h  gl_mesh.cpp  gl_mesh.h  gl_renderer.cpp  gl_renderer.h  gl_scene.cpp  gl_scene.h  gl_texture.cpp  gl_texture.h  gl_uniform_buffer_object.cpp  gl_uniform_buffer_object.h  gl_window.cpp  gl_window.h
client/engine/resources/shaders/: phong.frag  ubo.glsl
client/lib/: vmf.cpp  vmf.h
client/lib/qt/: theme_css_watcher.h
client/lib/qt/theme/: DarkBlue.qss
client/lib/vmfpp/: vmfpp.cpp
server/: CMakeLists.txt  asset_pack_manager.cpp  asset_pack_manager.h  ctx.cpp  ctx.h  main.cpp  webserver.cpp  webserver.h
server/lib/vtf/: vtf.cpp  vtf.h
shared/: CMakeLists.txt
shared/lib/: bencodeparser.cpp  bencodeparser.h  file_packer.cpp  file_packer.h  globals.cpp  globals.h  godot.cpp  godot.h  logger.cpp  utils.cpp  utils.h  zlib_compressor.cpp
shared/lib/network/: wsclient.cpp
shared/lib/network/torrent/: aria2.cpp  aria2.h  metainfo.cpp  metainfo.h
shared/models/: asset_pack.cpp  asset_pack.h  texture.cpp  texture.h  texture_image.cpp  texture_image.h
